# keyboarde

./: CMakeLists.txt  README.md  main.cpp
keyboarde/inc/: keyboarde.h
keyboarde/src/: keyboarde.cpp  slots.cpp
